# glossaryused

./: LICENSE  README.rst  pyproject.toml
src/sphinxcontrib/glossaryused/: __init__.py  glossary_used.py
tests/: conftest.py
